fixed visual bug that h2 is too light

--- a/src/index.css
+++ b/src/index.css
@@ -68,8 +68,7 @@ body {
   margin: 0;
 }
 
-h1,
-h2 {
+:where(h1, h2) {
   font-family: var(--heading);
   font-weight: 500;
   color: var(--text-h);
